--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Seminarfach</title>
-    <script src="../main.js"></script>
-    <script src="../scripts/DB.js"></script>
-    <script src="../scripts/jquery.min.js"></script>
+    <script src="./main.js"></script>
+    <script src="./scripts/DB.js"></script>
+    <script src="./scripts/jquery.min.js"></script>
 
-    <link rel="manifest" href="../manifest.json">
+    <link rel="manifest" href="./manifest.json">
   </head>
   <body style="background-color:rgb(38, 38, 38);">
     <p style="color:rgb(0,0,0);">Seminarfach</p>
